--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mssql": "^6.2.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
+    "node-libcurl": "^2.1.1",
     "oas3-tools": "^2.0.2",
     "pg": "^8.2.1",
     "sqlite3": "^4.2.0",
