--- a/other/backend/spec.yaml
+++ b/other/backend/spec.yaml
@@ -12,7 +12,7 @@ info:
   license:
     name: "Eco Vibes License"
     url: "http://license.foo.com"
-host: localhost:5000
+host: hypproject1920.herokuapp.com
 basePath: /api
 tags:
 - name: "person"
@@ -24,13 +24,13 @@ tags:
 - name: "project"
   description: "Everything about project"
 schemes:
-- "http"
+- "https"
 paths:
   /person:
     get:
       tags:
       - "person"
-      description: "Obtain information about the people working in the compnay"
+      description: "Obtain information about the people working in the company"
       operationId: "personGET"
       parameters:
       - name: "bodyLimit"
@@ -454,7 +454,8 @@ definitions:
         example: "finish"
         enum:
         - "finish"
-        - "not finish"
+        - "in progress"
+        - "not started"
       description:
         type: "string"
         example: "Recupero e valorizzazione agricola e forestale, nonché didattico – ricreativa della piana di Castensago"
